--- a/doc/html2xhtml.1
+++ b/doc/html2xhtml.1
@@ -116,6 +116,14 @@ inline element (or character data) and the end tag
 of the block element. By default, if this option is
 not set, a new line character and indentation is
 written between them.
+.IP \fB--empty_elm_tags_always\fR 20
+By default, empty element tags are written only for
+elements declared as empty in the DTD. This option
+makes any element not having content to be written
+with the empty element tag, even if it si not declared
+as empty in the DTD. This option can cause problems
+when the XHTML document is opened by browsers in
+HTML (tag soup) mode.
 
 .SH NOTE ON CHARACTER ENCODINGS
 
