--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-07-27  Jesus Arias Fisteus <jaf@it.uc3m.es>
+
+	* html2xhtml Empty element tags written only for elements 
+	declared as empty in DTD.
+
 2008-04-08  Jesus Arias Fisteus <jaf@it.uc3m.es>
 
 	* html2xhtml Fixed two bugs related to incorrect memory access.
