Change in the copyright notice.

--- a/doc/html2xhtml.1
+++ b/doc/html2xhtml.1
@@ -189,7 +189,9 @@ advised by:
 Rebeca Diaz Redondo
 Ana Fernandez Vilas
 .PP
-Copyright 2000-2009 by Jesus Arias Fisteus, Rebeca Diaz Redondo, Ana
+Copyright 2000-2001 by Jesus Arias Fisteus, Rebeca Diaz Redondo, Ana
 Fernandez Vilas.
+Copyright 2002-2009 by Jesus Arias Fisteus
+
 
 
