--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-05-28  Jesus Arias Fisteus <jaf@it.uc3m.es>
+
+	* html2xhtml Updated DTD data.
+
 2009-04-13  Jesus Arias Fisteus <jaf@it.uc3m.es>
 
 	* html2xhtml Released as 1.1.2-rc1
