--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-07-02  Jesus Arias Fisteus <jaf@it.uc3m.es>
+
+	* html2xhtml More robust handling of invalid chars
+
 2009-06-30  Jesus Arias Fisteus <jaf@it.uc3m.es>
 
 	* html2xhtml Several bugfixes.
