--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-06-30  Jesus Arias Fisteus <jaf@it.uc3m.es>
+
+	* html2xhtml Several bugfixes.
+	* html2xhtml Released as 1.1.2-rc2
+
 2009-05-28  Jesus Arias Fisteus <jaf@it.uc3m.es>
 
 	* html2xhtml Updated DTD data.
