Updated the AUTHORS file.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,10 +1,14 @@
-Program developer up to current version:
-Jesus Arias Fisteus <jaf@it.uc3m.es>
+Main developer and maintainer:
 
-The first working version of this program has been developed as 
-a Master Thesis at the University of Vigo (Spain) [http://www.uvigo.es],
+Jesus Arias Fisteus (https://github.com/jfisteus)
+
+The first working version of this program has been developed as a
+Master Thesis at the University of Vigo (Spain) [http://www.uvigo.es],
 advised by:
 
 Rebeca Diaz Redondo
 Ana Fernandez Vilas
 
+Contributors:
+
+Joshua Pokotilow (https://github.com/avium)
