node.js example

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,3 +12,4 @@ Ana Fernandez Vilas
 Contributors:
 
 Joshua Pokotilow (https://github.com/avium)
+Denis Trofimov (https://github.com/mobilecodingru)
