--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-09-19  Jesus Arias Fisteus <jaf@it.uc3m.es>
+
+	* html2xhtml Released version 1.1.3
+	* html2xhtml Improved solution to the vsnprintf problem
+	* html2xhtml New snippet mode.
+	* html2xhtml Web API example clients for BASH, Node.js and Python.
+	* html2xhtml Fixed a segfault error.
+	* html2xhtml Updated the autotools files to recent versions.
+
 2010-04-07  Jesus Arias Fisteus <jaf@it.uc3m.es>
 
 	* html2xhtml Released version 1.1.2-2
