Fix things for allowing compilation in OS X.
- glibtoolize needs to be used instead of libtoolize.
- Non-ASCII characters in some source files caused problems.
- A return without value caused a compilation error.

I've also done some white space removing at the same time
I've fixed the problems with the non-ASCII characters,
as well as removed a piece of unused code.

--- a/README
+++ b/README
@@ -62,6 +62,8 @@ $ autoheader
 $ automake --add-missing
 $ autoconf
 
+In OS X you need to use the glibtoolize command instead of libtoolize.
+
 After that, you should get the ./configure script and proceed as
 explained above:
 
