--- a/doc/html2xhtml.1
+++ b/doc/html2xhtml.1
@@ -135,6 +135,11 @@ HTML (tag soup) mode.
 Write the output XHTML file with DOS--style (CRLF) end of line,
 instead of the default UNIX--style end of line.
 Both end of line styles are allowed by the XML recommendation.
+.IP \fB--generate-snippet\fR 20
+Treat the input as an HTML fragment instead of
+a full document.
+The output will also be a snippet and will not contain either the XML
+and doctype declarations or the html, head and body elements.
 .IP \fB--help\fR 20
 Show a brief help message and exit.
 .IP \fB--version\fR 20
