--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
-2014-09-23  Jesus Arias Fisteus <jaf@it.uc3m.es>
+2025-06-02  Jesus Arias Fisteus <jaf@it.uc3m.es>
+
+	* html2xhtml Released version 1.4
+	* html2xhtml New command line option to generate
+	a SYSTEM DTD declaration.
+	* html2xhtml Several bugfixes related to memory management.
+
+2015-09-23  Jesus Arias Fisteus <jaf@it.uc3m.es>
 
 	* html2xhtml Released version 1.3
 	* html2xhtml Improved solution to the vsnprintf problem
